---------------------------------------------------------------------------
Version 4.7.0  [v4-devel] (rgerhards), 2009-09-??
- added $LogRSyslogStatusMessages configuration directive
  permitting to turn off rsyslog start/stop/HUP messages. See Debian
  ticket http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=463793
---------------------------------------------------------------------------
Version 4.5.3  [v4-beta] (rgerhards), 2009-08-??
- bugfix: message sanitation had some issues:
  - control character DEL was not properly escaped
  - NUL and LF characters were not properly stripped if no control
    character replacement was to be done
  - NUL characters in the message body were silently dropped (this was
    a regeression introduced by some of the recent optimizations)
- bugfix: strings improperly reused, resulting in some message properties
  be populated with strings from previous messages. This was caused by
  an improper predicate check. [backported from v5]
- bugfix: reverse lookup reduction logic in imudp do DNS queries too often
  [imported from 4.4.2]
---------------------------------------------------------------------------
Version 4.5.2  [v4-beta] (rgerhards), 2009-08-21
- legacy syslog parser changed so that it now accepts date stamps in
  wrong case. Some devices seem to create them and I do not see any harm
  in supporting that.
- added $InputTCPMaxListeners directive - permits to specify how many 
  TCP servers shall be possible (default is 20).
- bugfix: memory leak with some input modules. Those inputs that
  use parseAndSubmitMsg() leak two small memory blocks with every message.
  Typically, those process only relatively few messages, so the issue 
  does most probably not have any effect in practice.
- bugfix: if tcp listen port could not be created, no error message was
  emitted
- bugfix: potential segfault in output file writer (omfile)
  In async write mode, we use modular arithmetic to index the output